[package]
name = "arrav"
version = "0.1.1"
authors = ["Jon Gjengset <jon@thesquareplanet.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

readme = "README.md"
description = "Sentinel-based heapless vector"
repository = "https://github.com/jonhoo/arrav.git"

keywords = ["vector","array","const"]
categories = ["data-structures"]

[badges]
azure-devops = { project = "jonhoo/jonhoo", pipeline = "arrav", build = "21" }
codecov = { repository = "jonhoo/arrav", branch = "master", service = "github" }
maintenance = { status = "experimental" }

[features]
std = []
default = ["std"]
