[package]
name = "arrav"
version = "0.1.1"
authors = ["Jon Gjengset <jon@thesquareplanet.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

readme = "README.md"
description = "Sentinel-based heapless vector"
repository = "https://github.com/jonhoo/arrav.git"

keywords = ["vector","array","const"]
categories = ["data-structures", "no-std"]

[badges]
azure-devops = { project = "jonhoo/jonhoo", pipeline = "arrav", build = "21" }
codecov = { repository = "jonhoo/arrav", branch = "master", service = "github" }
maintenance = { status = "experimental" }

[features]
std = []
simd = ["packed_simd"]
default = ["std", "simd"]

[dependencies]
packed_simd = { version = "0.3", optional = true }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "len"
harness = false
