[package]
name = "arrav"
version = "0.1.3"
authors = ["Jon Gjengset <jon@thesquareplanet.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

readme = "README.md"
description = "Sentinel-based heapless vector"
repository = "https://github.com/jonhoo/arrav.git"

keywords = ["vector","array","const"]
categories = ["data-structures", "no-std"]

[badges]
azure-devops = { project = "jonhoo/jonhoo", pipeline = "arrav", build = "21" }
codecov = { repository = "jonhoo/arrav", branch = "master", service = "github" }
maintenance = { status = "experimental" }

[features]
std = []
specialization = []
simd = ["specialization"]
default = ["std", "specialization"]

[dependencies]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "len"
harness = false
